Major update: Add new UI components, authentication tools, and fix various issues

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
   "dependencies": {
     "@fontsource/poppins": "^5.2.5",
     "@fontsource/roboto": "^5.2.5",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "animejs": "^3.2.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.1",
@@ -48,6 +51,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.5.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
