Add database migration scripts for PostgreSQL

--- a/.env.render.example
+++ b/.env.render.example
@@ -8,4 +8,11 @@ PORT=5000
 NODE_ENV=production
 
 # JWT Secret (use a strong, unique value in production)
-JWT_SECRET=your-strong-production-jwt-secret-key-here 
+JWT_SECRET=your-strong-production-jwt-secret-key-here
+
+# 数据迁移说明:
+# 1. 在Render Dashboard中设置上述环境变量
+# 2. 连接到Render Shell或使用本地环境设置DATABASE_URL
+# 3. 执行迁移命令:
+#    - 从MySQL迁移: npm run migrate:to-postgres
+#    - 从Excel文件迁移: npm run migrate:excel-to-postgres 
