--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "analyze:excel": "node analyze-excel.js",
     "analyze:attendance": "node analyze-attendance.js",
     "analyze:attendance:test": "cross-env NODE_ENV=test node analyze-attendance.js",
-    "analyze:attendance:prod": "cross-env NODE_ENV=production node analyze-attendance.js",
-    "update-chess-columns": "node update-database.js",
-    "deploy": "node update-database.js && node server.js"
+    "analyze:attendance:prod": "cross-env NODE_ENV=production node analyze-attendance.js"
   },
   "dependencies": {
     "@fontsource/poppins": "^5.2.5",
@@ -51,7 +49,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.14.0",
-    "node-fetch": "^2.7.0",
+    "nodemailer": "^6.10.1",
     "pg": "^8.11.3",
     "python-shell": "^5.0.0",
     "react": "^18.2.0",
