--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ yarn-error.log*
 *.sublime-workspace 
 # SpecStory explanation file
 .specstory/.what-is-this.md
+
+# Excel temporary files
+~$*.xlsx
+~$*.xls
