--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@fontsource/roboto": "^5.2.5",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-three/drei": "^9.88.0",
+    "@react-three/fiber": "^8.15.0",
     "animejs": "^3.2.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -46,6 +48,7 @@
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.6.5",
+    "gsap": "^3.12.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.14.0",
@@ -59,6 +62,7 @@
     "react-router-dom": "^7.5.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.160.0",
     "web-vitals": "^4.2.4",
     "xlsx": "^0.18.5"
   },
